# Spotify-dbus-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: commands.py  main.py  spotify.py
src/spotify_dbus/: commands.py  main.py  spotify.py
